--- a/README
+++ b/README
@@ -3,7 +3,7 @@ SmartSync Install Guide (testet on Ubuntu 12.04 64bit)
 # Requirements:
     * qmake
     * CCNx 0.8.0rc1
-    * Boost++
+    * Boost C++
     * OpenSSL
 
 # Building:
